# cnix

./: CMakeLists.txt  LICENSE  README  README.md
examples/: store_path.c
include/cnix/: cnix.h  cnix_error.h
src/: CMakeLists.txt  cnix_core.cpp  cnix_def.hpp  cnix_error.cpp  cnix_utils.hpp
tests/unit/: CMakeLists.txt  cnix_base_tests.c
